--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
  * Used button style from course website
  */
 button {
-  color: white;
   margin: 6px 0px 15px 20px;
   background-color: #0076ff;
   padding: 6px 12px 6px 12px;
@@ -33,7 +32,20 @@ div {
   width: 80%;
 }
 
-body, button {
+.msg {
+  background-color: yellow;
+}
+
+.pass {
+  background-color: green;
+}
+
+.msg, .pass {
+  width: 100%;
+  height: 50px;
+}
+
+body, button, div {
   text-align: center;
 }
 
@@ -43,4 +55,8 @@ button, textarea {
 
 body, button, textarea {
   font-family: 'Open Sans', sans-serif;
+}
+
+button, .pass {
+  color: white;
 }
