--- a/style.css
+++ b/style.css
@@ -18,9 +18,17 @@ button {
   box-shadow: 0 4px 14px 0 rgba(0,118,255,0.39);
 }
 
+h2 {
+  margin-bottom: 0;
+}
+
 div {
   margin-left: auto;
   margin-right: auto;
+}
+
+#disclaimer {
+  background-color: red;
 }
 
 #output-area {
@@ -40,6 +48,10 @@ div {
   background-color: green;
 }
 
+.hidden {
+  display: none;
+}
+
 .msg, .pass {
   width: 100%;
   height: 20px;
@@ -57,6 +69,6 @@ body, button, textarea {
   font-family: 'Open Sans', sans-serif;
 }
 
-button, .pass {
+button, .pass, #disclaimer {
   color: white;
 }
